# logical_robotics_harness

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROMPTS.md  README.md  REVIEWS.md  STYLE.md  constraints-dev.txt  environment.yml  pyproject.toml
.github/workflows/: coverage.yml  installed-wheel-smoke.yml  lint.yml  meta.yml  release-tag-ci.yml  release.yml  request-copilot-review.yml  smoke.yml  testpypi-rehearsal.yml  tests.yml
.jules/: bolt.md  sentinel.md
docs/: README.md  architecture.md  release.md  repository_spec.md
docs/conversations/: README.md  chatgpt_pdf_import.md  conversation-capture-options.md  promote-conversation-to-project-artifact.md
docs/decisions/: precedence_semantics.md
docs/explanations/: README.md  control-plane-model.md  docs-audit-workflow.md  evidence-backed-status.md  precedence-model.md  prompt-driven-workflow.md  repository-state-vs-runtime-state.md  why-lrh.md  work-item-lifecycle-boundaries.md  workspace-and-meta-model.md
docs/how-to/: README.md  audit-project-docs.md  generate-a-snapshot.md  inspect-workspace-state.md  keep-skills-up-to-date.md  manage-work-item-lifecycle.md  organize-project-docs.md  register-a-project-with-meta.md  run-a-release.md  survey-a-source-tree.md  use-request-templates.md  use-the-developer-sandbox.md  validate-a-project.md
docs/project-setup/: README.md  ci.md
docs/reference/: README.md  docs-audit-artifact-convention.md  documentation-structure.md
docs/tutorials/: README.md  first-lrh-project.md  first-prompt-driven-change.md  work-item-readiness.md
lrh/control/: __init__.py
lrh/guardrails/: __init__.py  cost.py  engine.py  models.py  optics.py
project/: context.md
project/assistants/: README.md  token-vocabulary.md
project/audits/: 2026-05-20-development-agenda-reconciliation-audit.md  2026-05-22-meta-dashboard-mvp-dogfood-audit.md  2026-05-24-docs-requests-nested-layout-dogfood-audit.md  2026-07-05-security-audit.md  README.md  chatgpt_pdf_dataset_conversion_audit.md  coverage_survey_audit.md  planning_tree_implementation_audit.md
project/context/: humans.md
project/contributors/: contributors.md
project/design/: architecture.md  backlog.md  design.md  dev_toolchain_reconciliation.md  execution_framework_mvp.md  meta_control_plane_mvp_spec.md  repository_spec.md  request_command_naming.md  work_item_readiness_workflow.md  workstream_schema_mvp.md
project/evidence/: EV-0001.md  EV-0002.md  EV-0003.md  EV-0004.md  EV-0005.md  EV-0006.md  EV-0007.md  EV-0008.md  EV-0009.md  EV-0010.md
project/executions/: README.md
project/focus/: current_focus.md  development_agenda.md
project/goal/: project_goal.md
project/guardrails/: approvals.md  cost.md  optics.md  safety.md
project/memory/: decision_log.md  lessons_learned.md  open_questions.md
project/principles/: engineering_norms.md  evaluation_norms.md  principles.md
project/roadmap/: phase_01_control_plane.md  phase_01a_planning_tree_workstreams.md  phase_02_runtime_and_workspace.md  phase_03_execution_evidence_status.md  (+2 more)
scripts/: README.md  build  check-workflows  clean  coverage  develop  format  install-completion  lint  publish  release-smoke  sandbox  smoke  smoke_assist_install  test  validate  version
tests/: __init__.py  aiprog_request_test.py  aiprog_smoke_test.py  cli_main_test.py  cli_request_test.py  cli_snapshot_test.py  cli_survey_test.py  control_validator_test.py  guardrails_engine_test.py  meta_cli_flow_integration_test.py  meta_init_test.py  meta_inspect_test.py  meta_list_test.py  meta_register_test.py  meta_where_test.py  meta_workspace_resolution_test.py  scripts_sandbox_test.py  skills_installer_test.py  version_test.py
tools/: README.md  create_request.py  sourcetree_surveyor.py
(+934 files in other folders)
