[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logical-robotics-harness"
dynamic = ["version"]
description = "Seed repository for Logical Robotics Harness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Anthony Francis"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "coverage",
  "ruff",
]

[project.scripts]
lrh = "lrh.cli.main:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lrh.assist" = ["templates/*.md", "templates/*/*.md", "templates/**/*.md"]


[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
