[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrh"
dynamic = ["version"]
description = "Structured, evidence-backed project control-plane harness"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Anthony Francis"}
]
keywords = ["agent-assist", "control-plane", "project-management", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.urls]
Repository = "https://github.com/xenotaur/logical_robotics_harness"
Issues = "https://github.com/xenotaur/logical_robotics_harness/issues"

[project.optional-dependencies]
completion = [
  "argcomplete>=3",
]

dev = [
  "black",
  "build",
  "coverage",
  "ruff",
  "PyYAML",
]

[project.scripts]
lrh = "lrh.cli.main:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lrh.assist" = ["templates/*.md", "templates/*/*.md", "templates/**/*.md"]
"lrh" = [
  "templates/project_bootstrap/*.md",
  "templates/project_bootstrap/*/*.md",
  "templates/project_bootstrap/**/*.md",
]


[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.black]
line-length = 88
target-version = ["py311"]
required-version = "26.3.1"

[tool.ruff]
line-length = 88
target-version = "py311"
required-version = "==0.15.12"

[tool.ruff.lint]
select = ["E", "F", "I"]
